fix overflow issue

--- a/sass/whitelabel/prize/landing.scss
+++ b/sass/whitelabel/prize/landing.scss
@@ -4,7 +4,7 @@
     height: 100%;
 
     /* We need this, otherwise piece list will have a scrollbar */
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .hero {
